# summit_xl_our_common

./: README.md
our_arm_description/: CMakeLists.txt  display.rviz  package.xml
our_arm_description/launch/: display.launch
our_arm_description/meshes/: OUR2-base.STL  OUR2-base.dae  OUR2-terminal.STL  OUR2-terminal.dae  OURII-link1.STL  OURII-link1.dae  OURII-link2.STL  OURII-link2.dae  OURII-link3.STL  OURII-link3.dae  OURII-link4.STL  OURII-link4.dae  OURII-link5.STL  OURII-link5.dae  OURII-link6.STL  OURII-link6.dae  base.stl  joint_type_1.stl  joint_type_2.stl  link_type_1.stl  link_type_2.stl  terminal.stl
our_arm_description/robots/: OUR-II.URDF  our_arm.urdf
our_pad/: CMakeLists.txt  package.xml
our_pad/config/: ps3.yaml
our_pad/launch/: our_pad.launch
our_pad/src/: our_pad.cpp
summit_xl_our_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
summit_xl_our_arm_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  summit_hl_our.srdf
summit_xl_our_arm_moveit_config/launch/: default_warehouse_db.launch  demo.launch  demo_lmn.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  summit_hl_our_moveit_controller_manager.launch.xml  warehouse.launch  (+1 more)
summit_xl_our_description/: CMakeLists.txt  display.rviz  package.xml
summit_xl_our_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+32 files in other folders)
