<?xml version="1.0"?>
<package>
  <name>our_pad</name>
  <version>0.0.0</version>
  <description>The our_pad package</description>

  <maintainer email="trurl@todo.todo">trurl</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
